ZODB Requires:
~~~~~~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Password widget: able to define a policy for password validation:
  checking min, max size checking lower, upper, digit or extra chararcter
Bug fixes:
~~~~~~~~~~
- renderHtmlTag unable to generate <option value=""> tag
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- EmailWidget
  - no validation in search mode 
  - '+' is allowed in email addresses.
- Vocabularies are now preferrably initialized using the
  syntax (('foo': "Foo"), ('bar': "Bar")).